--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
 
 html, body {
   height: 100%;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 h1,
@@ -17,4 +18,26 @@ h5,
 h6,
 p {
   margin-bottom: 16px;
+}
+
+nav {
+  height: 60px;
+  background-color: black;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+nav a {
+  color: #fff;
+  font-size: 25px;
+  text-decoration: none;
+}
+nav a:hover {
+  color: palevioletred;
 }
