--- a/scss/structure.scss
+++ b/scss/structure.scss
@@ -5,6 +5,7 @@
    }
    html, body {
     height: 100%;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    
    }
    h1, 
@@ -16,4 +17,3 @@
    p {
     margin-bottom: 16px
    }
-   
