--- a/css/styles.css
+++ b/css/styles.css
@@ -41,3 +41,23 @@ nav a {
 nav a:hover {
   color: palevioletred;
 }
+
+.about-section {
+  width: 75%;
+  height: 800px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: center;
+  margin: 0 auto;
+  margin-top: 50px;
+}
+.about-section .about-content {
+  height: auto;
+  width: 500px;
+  margin: 0 auto;
+}
