--- a/css/styles.css
+++ b/css/styles.css
@@ -41,3 +41,22 @@ nav a {
 nav a:hover {
   color: palevioletred;
 }
+
+footer {
+  height: 60px;
+  background-color: black;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+footer span {
+  text-align: center;
+  color: palevioletred;
+  font-size: 20px;
+}
