--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,4 +1,5 @@
 @import "structure.scss";
 @import "nav.scss";
 @import "home.scss";
-@import "footer";
+@import "about.scss";
+@import "footer.scss";
