--- a/css/styles.css
+++ b/css/styles.css
@@ -92,7 +92,7 @@ nav a:hover {
   height: 45px;
   font-size: 16px;
   border-radius: 30px;
-  background-color: rgb(0, 0, 0);
+  background-color: black;
   color: palevioletred;
 }
 .home .hero .callout button:hover {
