--- a/scss/home.scss
+++ b/scss/home.scss
@@ -39,8 +39,21 @@ color: palevioletred;
 
                 color: black;
                 border: none;
-                
+
             }
+        }
+    }
+
+    .info{
+        margin-left: 90px;
+        margin-right: 90px;
+        margin-top: 60px;
+        h1{
+            color: palevioletred;
+            font-size: 35px;
+        }
+        p{
+            font-size: 16px;
         }
     }
 }
