--- a/css/nav.css
+++ b/css/nav.css
@@ -1,7 +1,43 @@
 nav {
   height: 60px;
   background-color: black;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
 }
 nav a {
+  color: #fff;
+  font-size: 25px;
+  text-decoration: none;
+}
+nav a:hover {
   color: palevioletred;
+}
+
+@media screen and (max-width: 768px) {
+  body {
+    max-width: 768px;
+    text-align: center;
+  }
+
+  nav {
+    height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  nav a {
+    margin-right: 0;
+    color: purple;
+  }
 }
