--- a/css/styles.css
+++ b/css/styles.css
@@ -41,15 +41,28 @@ nav a {
 nav a:hover {
   color: palevioletred;
 }
-@media screen and (max-width: 500px) {
-  nav nav a {
+
+@media screen and (max-width: 768px) {
+  body {
+    max-width: 768px;
+    text-align: center;
+  }
+
+  nav {
     height: 100%;
-    -webkit-box-align: left;
-        -ms-flex-align: left;
-            align-items: left;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  nav a {
+    margin-right: 0;
+    color: purple;
   }
 }
-
 .home .hero {
   width: 100%;
   height: 760px;
@@ -92,7 +105,7 @@ nav a:hover {
   height: 45px;
   font-size: 16px;
   border-radius: 30px;
-  background-color: rgb(0, 0, 0);
+  background-color: black;
   color: palevioletred;
 }
 .home .hero .callout button:hover {
