--- a/scss/nav.scss
+++ b/scss/nav.scss
@@ -1,10 +1,11 @@
-nav{
+nav {
     height: 60px;
     background-color: black;
     display: flex;
     align-items: center ;
     justify-content: space-evenly;
-    a{
+    
+    a {
         color:#fff;
         font-size: 25px;
         text-decoration: none;
@@ -12,13 +13,24 @@ nav{
     }
     a:hover{
         color: palevioletred;
-    }
 
-    @media screen and (max-width: 500px) {
-        nav a {
-            height: 100%;
-            align-items: left;
-        }
-    }
+   }
 }
 
+ //media query
+ @media screen and (max-width: 768px) {
+    body {
+        max-width: 768px;
+        text-align: center;
+    }
+    nav {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+
+        a {
+            margin-right: 0;
+            color: purple;
+        }
+    }
+ }
