--- a/css/styles.css
+++ b/css/styles.css
@@ -104,6 +104,7 @@ nav a:hover {
   margin-left: 90px;
   margin-right: 90px;
   margin-top: 60px;
+  margin-bottom: 80px;
 }
 .home .info h1 {
   color: palevioletred;
