--- a/scss/home.scss
+++ b/scss/home.scss
@@ -1,4 +1,5 @@
 .home{
+
     .hero{
         width: 100%;
         height: 760px;
@@ -48,6 +49,7 @@ color: palevioletred;
         margin-left: 90px;
         margin-right: 90px;
         margin-top: 60px;
+        margin-bottom: 80px;
         h1{
             color: palevioletred;
             font-size: 35px;
@@ -56,4 +58,6 @@ color: palevioletred;
             font-size: 16px;
         }
     }
+
+    
 }
