--- a/css/styles.css
+++ b/css/styles.css
@@ -47,6 +47,7 @@ nav a:hover {
     max-width: 768px;
     text-align: center;
   }
+
   nav {
     height: 100%;
     display: -webkit-box;
@@ -103,7 +104,7 @@ nav a:hover {
   height: 45px;
   font-size: 16px;
   border-radius: 30px;
-  background-color: rgb(0, 0, 0);
+  background-color: black;
   color: palevioletred;
 }
 .home .hero .callout button:hover {
@@ -211,5 +212,5 @@ footer span {
   cursor: pointer;
 }
 .contact .contact-section .contact-form button:hover {
-  background-color: rgb(214, 73, 120);
+  background-color: #d64978;
 }
