--- a/css/styles.css
+++ b/css/styles.css
@@ -47,7 +47,6 @@ nav a:hover {
     max-width: 768px;
     text-align: center;
   }
-
   nav {
     height: 100%;
     display: -webkit-box;
@@ -104,7 +103,7 @@ nav a:hover {
   height: 45px;
   font-size: 16px;
   border-radius: 30px;
-  background-color: black;
+  background-color: rgb(0, 0, 0);
   color: palevioletred;
 }
 .home .hero .callout button:hover {
@@ -212,5 +211,17 @@ footer span {
   cursor: pointer;
 }
 .contact .contact-section .contact-form button:hover {
-  background-color: #d64978;
+  background-color: rgb(214, 73, 120);
+}
+
+@media screen and (max-width: 768px) {
+  .contact {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .contact h1 {
+    margin-left: 25px;
+  }
 }
