--- a/css/nav.css
+++ b/css/nav.css
@@ -1,22 +1,27 @@
-nav {
+.navbar {
+  width: 100%;
   height: 60px;
   background-color: black;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  padding: 50px;
 }
-nav a {
+.navbar .nav-link {
+  padding: 50px;
+}
+.navbar a {
   color: #fff;
   font-size: 25px;
   text-decoration: none;
 }
-nav a:hover {
+.navbar a:hover {
   color: palevioletred;
 }
 
@@ -26,7 +31,7 @@ nav a:hover {
     text-align: center;
   }
 
-  nav {
+  .navbar {
     height: 100%;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -35,8 +40,25 @@ nav a:hover {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    background-color: palevioletred;
   }
-  nav a {
+  .navbar .nav-link {
+    width: 100%;
+    height: 200px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    margin: 0 auto;
+    text-align: center;
     margin-right: 0;
+    color: #fff;
+  }
+  .navbar .nav-link:hover {
+    background-color: black;
   }
 }
