--- a/css/styles.css
+++ b/css/styles.css
@@ -20,25 +20,30 @@ p {
   margin-bottom: 16px;
 }
 
-nav {
+.navbar {
+  width: 100%;
   height: 60px;
   background-color: black;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  padding: 50px;
 }
-nav a {
+.navbar .nav-link {
+  padding: 50px;
+}
+.navbar a {
   color: #fff;
   font-size: 25px;
   text-decoration: none;
 }
-nav a:hover {
+.navbar a:hover {
   color: palevioletred;
 }
 
@@ -47,7 +52,8 @@ nav a:hover {
     max-width: 768px;
     text-align: center;
   }
-  nav {
+
+  .navbar {
     height: 100%;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -56,9 +62,26 @@ nav a:hover {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    background-color: palevioletred;
   }
-  nav a {
+  .navbar .nav-link {
+    width: 100%;
+    height: 200px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    margin: 0 auto;
+    text-align: center;
     margin-right: 0;
+    color: #fff;
+  }
+  .navbar .nav-link:hover {
+    background-color: black;
   }
 }
 .home .hero {
@@ -103,7 +126,7 @@ nav a:hover {
   height: 45px;
   font-size: 16px;
   border-radius: 30px;
-  background-color: rgb(0, 0, 0);
+  background-color: black;
   color: palevioletred;
 }
 .home .hero .callout button:hover {
@@ -211,7 +234,7 @@ footer span {
   cursor: pointer;
 }
 .contact .contact-section .contact-form button:hover {
-  background-color: rgb(214, 73, 120);
+  background-color: #d64978;
 }
 
 @media screen and (max-width: 768px) {
