--- a/scss/nav.scss
+++ b/scss/nav.scss
@@ -1,9 +1,15 @@
-nav {
+.navbar {
+    width: 100%;
     height: 60px;
     background-color: black;
     display: flex;
-    align-items: center ;
-    justify-content: space-evenly;
+    justify-content: center;
+    align-items: center;
+    padding: 50px;
+
+   .nav-link {
+    padding: 50px;
+   }
     
     a {
         color:#fff;
@@ -23,13 +29,29 @@ nav {
         max-width: 768px;
         text-align: center;
     }
-    nav {
+
+    .navbar {
         height: 100%;
         display: flex;
         flex-direction: column;
+        background-color: palevioletred;
 
-        a {
+
+        .nav-link {
+            width: 100%;
+            height: 200px;
+            display: flex;
+            justify-content: center;
+            align-content: center;
+            margin: 0 auto;
+            text-align: center;
             margin-right: 0;
+            color:#fff;
+        }
+
+        .nav-link:hover {
+            background-color: black;
+
         }
     }
  }
