--- a/css/styles.css
+++ b/css/styles.css
@@ -273,6 +273,7 @@ footer span {
 .in button {
   width: 170px;
   border: none;
+  margin-top: 40px;
   height: 45px;
   font-size: 16px;
   border-radius: 30px;
