--- a/scss/info.scss
+++ b/scss/info.scss
@@ -46,6 +46,7 @@ text-align: center;
     button{
         width: 170px;
         border: none;
+        margin-top: 40px;
 height: 45px;
 font-size: 16px;
 border-radius: 30px;
