--- a/css/styles.css
+++ b/css/styles.css
@@ -266,6 +266,7 @@ footer span {
 }
 .in h1 {
   color: palevioletred;
+  margin-bottom: 20px;
 }
 .in p {
   font-size: 16px;
@@ -284,4 +285,16 @@ footer span {
   background-color: black;
   color: #fff;
   border: none;
+}
+
+@media screen and (max-width: 768px) {
+  .info {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .info h1 {
+    margin-bottom: 20px;
+  }
 }
