--- a/css/styles.css
+++ b/css/styles.css
@@ -48,16 +48,13 @@ p {
 }
 
 @media screen and (max-width: 768px) {
-  body {
-    max-width: 768px;
-    text-align: center;
-  }
-
   .navbar {
     height: 100%;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    margin: 0 auto;
+    text-align: center;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
@@ -65,7 +62,7 @@ p {
     background-color: palevioletred;
   }
   .navbar .nav-link {
-    width: 100%;
+    max-width: 768px;
     height: 200px;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -73,14 +70,13 @@ p {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    -ms-flex-line-pack: center;
-        align-content: center;
-    margin: 0 auto;
-    text-align: center;
-    margin-right: 0;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     color: #fff;
   }
   .navbar .nav-link:hover {
+    width: 100%;
     background-color: black;
   }
 }
