--- a/scss/nav.scss
+++ b/scss/nav.scss
@@ -32,6 +32,7 @@
         text-align: center;
         flex-direction: column;
         background-color: palevioletred;
+        padding: 0;
 
 
         .nav-link {
