--- a/css/nav.css
+++ b/css/nav.css
@@ -38,6 +38,7 @@
         -ms-flex-direction: column;
             flex-direction: column;
     background-color: palevioletred;
+    padding: 0;
   }
   .navbar .nav-link {
     max-width: 768px;
